{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 85,
  "lineage": "f0795922-56db-bb4d-281d-0a0dd280775a",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.68.38",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nic",
            "internal_domain_name_suffix": "0futcoxfg3ze1kh24fbzco0amf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-29-B7-DD",
            "name": "mtc-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "eastus",
            "name": "mtc-sg",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.68.38",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "name": "mtc-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mtc-resources",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
            "network_security_group_id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3a3169d1-37e5-4d72-a8fc-f143913b4065",
            "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "eastus",
            "name": "mtc-network",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet",
                "name": "mtc-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/6320dabf-5c9f-4203-892a-3d2b9978d382/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}